adding song distance calculator

--- a/top_songs_extract.ipynb
+++ b/top_songs_extract.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inspect the Million Playlist Dataset \"slice\""
+    "# Inspect the Million Playlist Dataset \"slices\""
    ]
   },
   {
