--- a/top_songs_extract.ipynb
+++ b/top_songs_extract.ipynb
@@ -1283,6 +1283,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/song_uid2name.json', 'w') as outfile:\n",
+    "    json.dump(SongNames, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
