expanding to multiple seed songs

--- a/Models/wrmf_example.ipynb
+++ b/Models/wrmf_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "'\\nNOTE: ONLY RUN THIS IF YOU WANT TO RECOMPUTE WRMF WITH NEW PARAMS.\\nOTHERWISE USE PRECOMPUTED FACTORIZATION (STORED LOCALLY/IN DRIVE)\\n'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,35 +93,28 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Recommended Songs for It Wasn't Me\n",
+      "Recommended Songs for [\"It Wasn't Me\", 'Ignition - Remix']\n",
       "------------------------------------------------------------\n",
       "Track Name                                        Score\n",
       "------------------------------------------------------------\n",
-      "It Wasn't Me                                      1.000000\n",
-      "Ignition - Remix                                  0.979100\n",
-      "Ride Wit Me                                       0.961078\n",
-      "Ms. Jackson                                       0.936374\n",
-      "Gold Digger                                       0.935728\n",
-      "Buy U a Drank (Shawty Snappin') (feat. Yung Joc)  0.928783\n",
-      "It Wasn't Me                                      0.924053\n",
-      "Hey Ya!                                           0.923784\n",
-      "Yeah!                                             0.922160\n",
-      "Remix to Ignition                                 0.921355\n"
+      "Ignition - Remix                                  0.990172\n",
+      "It Wasn't Me                                      0.988927\n",
+      "Ride Wit Me                                       0.954857\n",
+      "Gold Digger                                       0.932842\n",
+      "Buy U a Drank (Shawty Snappin') (feat. Yung Joc)  0.930893\n",
+      "Yeah!                                             0.928637\n",
+      "Ms. Jackson                                       0.926211\n",
+      "It Wasn't Me                                      0.924964\n",
+      "Hey Ya!                                           0.922270\n",
+      "Promiscuous                                       0.921835\n"
      ]
     }
    ],
    "source": [
-    "# example: It Wasn't Me, by Shaggy\n",
-    "song_id = '1lzr43nnXAijIGYnCT8M8H'\n",
-    "top_matches = wrmf_helpers.get_top_tracks(song_factors, song_id, n_similar=10, verbose=True)"
+    "# example: It Wasn't Me, by Shaggy and Ignition - Remix\n",
+    "song_ids = ['1lzr43nnXAijIGYnCT8M8H', '5dNfHmqgr128gMY2tc5CeJ']\n",
+    "top_matches = wrmf_helpers.get_top_tracks(song_factors, song_ids, n_similar=10, verbose=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
