updated wrmf pipeline example

--- a/Models/wrmf_example.ipynb
+++ b/Models/wrmf_example.ipynb
@@ -70,17 +70,32 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1610661, 20)\n",
+      "(500000, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "with open('wrmf_song_factors.pickle', 'rb') as f:\n",
-    "    song_factors = pickle.load(f)"
+    "    song_factors = pickle.load(f)\n",
+    "    \n",
+    "with open('wrmf_playlist_factors.pickle', 'rb') as f:\n",
+    "    playlist_factors = pickle.load(f)\n",
+    "\n",
+    "print(song_factors.shape)\n",
+    "print(playlist_factors.shape)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (3) Get \"n_similar\" top songs from wrmf "
+    "# (4) Example: get \"n_similar\" top songs for random seed songs "
    ]
   },
   {
@@ -97,23 +112,169 @@
       "------------------------------------------------------------\n",
       "Track Name                                        Score\n",
       "------------------------------------------------------------\n",
-      "Ignition - Remix                                  0.990172\n",
-      "It Wasn't Me                                      0.988927\n",
-      "Ride Wit Me                                       0.954857\n",
-      "Gold Digger                                       0.932842\n",
-      "Buy U a Drank (Shawty Snappin') (feat. Yung Joc)  0.930893\n",
-      "Yeah!                                             0.928637\n",
-      "Ms. Jackson                                       0.926211\n",
-      "It Wasn't Me                                      0.924964\n",
-      "Hey Ya!                                           0.922270\n",
-      "Promiscuous                                       0.921835\n"
+      "Ignition - Remix                                  0.988348\n",
+      "It Wasn't Me                                      0.986976\n",
+      "Ride Wit Me                                       0.939032\n",
+      "Buy U a Drank (Shawty Snappin') (feat. Yung Joc)  0.910351\n",
+      "Remix to Ignition                                 0.905673\n",
+      "Playin' the Game                                  0.896503\n",
+      "Ms. Jackson                                       0.894765\n",
+      "Gold Digger                                       0.894054\n",
+      "It Wasn't Me                                      0.892494\n",
+      "Yeah!                                             0.889881\n"
      ]
     }
    ],
    "source": [
     "# example: It Wasn't Me, by Shaggy and Ignition - Remix\n",
     "song_ids = ['1lzr43nnXAijIGYnCT8M8H', '5dNfHmqgr128gMY2tc5CeJ']\n",
-    "top_matches = wrmf_helpers.get_top_tracks(song_factors, song_ids, n_similar=10, verbose=True)"
+    "top_matches = wrmf_helpers.get_top_similar_from_tracks(song_factors, song_ids, n_similar=10, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# (3) Example: get \"n_similar\" top songs for seed from actual test playlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = '/Users/mabasta/Desktop/CS109a/playlist-generation/data/Songs/songs501.csv'\n",
+    "cols_ignore = ['pos', 'artist_name', 'artist_uri', 'track_name', 'album_uri', 'duration_ms', 'album_name']\n",
+    "df = pd.read_csv(filename).drop(columns = cols_ignore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My Girl (feat. T. Gatez)\n",
+      "New Religion\n",
+      "Broad Shoulders (feat. Chance the Rapper)\n",
+      "Free\n",
+      "She Moves In Her Own Way\n",
+      "Don't Take the Money\n",
+      "that one song\n",
+      "Lovely\n",
+      "Always Like This\n",
+      "Twice\n",
+      "Caroline\n",
+      "Never Seen Anything \"Quite Like You\"\n",
+      "Sunshine & Kool-Aid\n",
+      "No Such Thing\n",
+      "Heart's Content\n",
+      "Smoke and Mirrors\n",
+      "Best For Last\n",
+      "90210 (feat. G-Eazy)\n",
+      "Spaces\n",
+      "Milk & Honey\n",
+      "Don't Dream It's Over\n",
+      "Lover Come Back\n",
+      "A Dream Is A Wish Your Heart Makes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print out the playlist\n",
+    "sample_playlists = [group.track_uri for _, group in df.groupby('pid')]\n",
+    "test_playlist = sample_playlists[0]\n",
+    "test_playlist = test_playlist.str.replace('spotify:track:', '')\n",
+    "\n",
+    "for tid in test_playlist:\n",
+    "    print(wrmf_helpers.get_song_name(tid))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smoke and Mirrors\n",
+      "A Dream Is A Wish Your Heart Makes\n",
+      "that one song\n",
+      "Milk & Honey\n",
+      "New Religion\n",
+      "Caroline\n",
+      "My Girl (feat. T. Gatez)\n",
+      "Lovely\n",
+      "Twice\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get similar using song to song\n",
+    "seed_ids = list(test_playlist[:2])\n",
+    "top_matches = wrmf_helpers.get_top_similar_from_tracks(\n",
+    "    song_factors,\n",
+    "    seed_ids,\n",
+    "    n_similar=20000,\n",
+    "    verbose=False\n",
+    ")\n",
+    "overlaps = set(test_playlist).intersection(set(top_matches))\n",
+    "for overlap in overlaps:\n",
+    "    print(wrmf_helpers.get_song_name(overlap))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smoke and Mirrors\n",
+      "Don't Dream It's Over\n",
+      "that one song\n",
+      "Milk & Honey\n",
+      "New Religion\n",
+      "Caroline\n",
+      "Lover Come Back\n",
+      "My Girl (feat. T. Gatez)\n",
+      "Broad Shoulders (feat. Chance the Rapper)\n",
+      "Heart's Content\n",
+      "90210 (feat. G-Eazy)\n",
+      "She Moves In Her Own Way\n",
+      "Free\n",
+      "Always Like This\n",
+      "No Such Thing\n",
+      "Twice\n",
+      "Sunshine & Kool-Aid\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get similar using playlist to song\n",
+    "top_matches = wrmf_helpers.get_top_similar_from_playlists(\n",
+    "    song_factors,\n",
+    "    playlist_factors,\n",
+    "    seed_ids,\n",
+    "    n_similar_songs=20000,\n",
+    "    n_similar_playlists=200\n",
+    ")\n",
+    "overlaps = set(test_playlist).intersection(set(top_matches))\n",
+    "for overlap in overlaps:\n",
+    "    print(wrmf_helpers.get_song_name(overlap))"
    ]
   }
  ],
