--- a/Models/wrmf_example.ipynb
+++ b/Models/wrmf_example.ipynb
@@ -208,15 +208,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Found 9 overlaps:\n",
+      "Twice\n",
       "Smoke and Mirrors\n",
-      "A Dream Is A Wish Your Heart Makes\n",
       "that one song\n",
-      "Milk & Honey\n",
-      "New Religion\n",
-      "Caroline\n",
-      "My Girl (feat. T. Gatez)\n",
       "Lovely\n",
-      "Twice\n"
+      "A Dream Is A Wish Your Heart Makes\n",
+      "My Girl (feat. T. Gatez)\n",
+      "New Religion\n",
+      "Milk & Honey\n",
+      "Caroline\n"
      ]
     }
    ],
@@ -230,6 +231,7 @@
     "    verbose=False\n",
     ")\n",
     "overlaps = set(test_playlist).intersection(set(top_matches))\n",
+    "print(f\"Found {len(overlaps)} overlaps:\")\n",
     "for overlap in overlaps:\n",
     "    print(wrmf_helpers.get_song_name(overlap))"
    ]
@@ -243,23 +245,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Smoke and Mirrors\n",
-      "Don't Dream It's Over\n",
-      "that one song\n",
-      "Milk & Honey\n",
-      "New Religion\n",
-      "Caroline\n",
-      "Lover Come Back\n",
-      "My Girl (feat. T. Gatez)\n",
-      "Broad Shoulders (feat. Chance the Rapper)\n",
-      "Heart's Content\n",
-      "90210 (feat. G-Eazy)\n",
-      "She Moves In Her Own Way\n",
-      "Free\n",
-      "Always Like This\n",
-      "No Such Thing\n",
+      "Found 17 overlaps:\n",
       "Twice\n",
-      "Sunshine & Kool-Aid\n"
+      "She Moves In Her Own Way\n",
+      "New Religion\n",
+      "No Such Thing\n",
+      "Broad Shoulders (feat. Chance the Rapper)\n",
+      "that one song\n",
+      "Smoke and Mirrors\n",
+      "Heart's Content\n",
+      "Always Like This\n",
+      "Don't Dream It's Over\n",
+      "Free\n",
+      "My Girl (feat. T. Gatez)\n",
+      "90210 (feat. G-Eazy)\n",
+      "Sunshine & Kool-Aid\n",
+      "Milk & Honey\n",
+      "Caroline\n",
+      "Lover Come Back\n"
      ]
     }
    ],
@@ -273,9 +276,71 @@
     "    n_similar_playlists=200\n",
     ")\n",
     "overlaps = set(test_playlist).intersection(set(top_matches))\n",
+    "print(f\"Found {len(overlaps)} overlaps:\")\n",
     "for overlap in overlaps:\n",
     "    print(wrmf_helpers.get_song_name(overlap))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 18 overlaps:\n",
+      "Twice\n",
+      "She Moves In Her Own Way\n",
+      "New Religion\n",
+      "No Such Thing\n",
+      "Broad Shoulders (feat. Chance the Rapper)\n",
+      "that one song\n",
+      "Smoke and Mirrors\n",
+      "Heart's Content\n",
+      "Always Like This\n",
+      "Don't Dream It's Over\n",
+      "Free\n",
+      "Never Seen Anything \"Quite Like You\"\n",
+      "My Girl (feat. T. Gatez)\n",
+      "90210 (feat. G-Eazy)\n",
+      "Sunshine & Kool-Aid\n",
+      "Milk & Honey\n",
+      "Caroline\n",
+      "Lover Come Back\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get similar using ensemble playlist and song\n",
+    "\n",
+    "top_matches = wrmf_helpers.get_top_similar_from_ensemble(\n",
+    "    song_factors,\n",
+    "    playlist_factors,\n",
+    "    seed_ids,\n",
+    "    n_similar_songs=20000,\n",
+    "    n_similar_playlists=200\n",
+    ")\n",
+    "overlaps = set(test_playlist).intersection(set(top_matches))\n",
+    "print(f\"Found {len(overlaps)} overlaps:\")\n",
+    "for overlap in overlaps:\n",
+    "    print(wrmf_helpers.get_song_name(overlap))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
