--- a/Models/wrmf_example.ipynb
+++ b/Models/wrmf_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "'\\nNOTE: ONLY RUN THIS IF YOU WANT TO RECOMPUTE WRMF WITH NEW PARAMS.\\nOTHERWISE USE PRECOMPUTED FACTORIZATION (STORED LOCALLY/IN DRIVE)\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
     "#     'iters': 20,\n",
     "#     'alpha': 15\n",
     "# }\n",
-    "# song_factors = wrmf_helpers.get_fitted_wrmf(PATH_TO_SPARSE_MATRIX, params)"
+    "# song_factors = get_wrmf_factors.get_fitted_wrmf(PATH_TO_SPARSE_MATRIX, params)"
    ]
   },
   {
@@ -68,24 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1610661, 20)\n",
-      "(500000, 20)\n"
+      "(2029866, 20)\n",
+      "(800000, 20)\n"
      ]
     }
    ],
    "source": [
-    "with open('wrmf_song_factors.pickle', 'rb') as f:\n",
-    "    song_factors = pickle.load(f)\n",
-    "    \n",
-    "with open('wrmf_playlist_factors.pickle', 'rb') as f:\n",
-    "    playlist_factors = pickle.load(f)\n",
+    "with open('wrmf_factors.pickle', 'rb') as f:\n",
+    "    playlist_factors, song_factors = pickle.load(f)\n",
     "\n",
     "print(song_factors.shape)\n",
     "print(playlist_factors.shape)"
@@ -95,12 +92,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (4) Example: get \"n_similar\" top songs for random seed songs "
+    "# (3) Example: get \"n_similar\" top songs for random seed songs "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -112,16 +109,16 @@
       "------------------------------------------------------------\n",
       "Track Name                                        Score\n",
       "------------------------------------------------------------\n",
-      "Ignition - Remix                                  0.988348\n",
-      "It Wasn't Me                                      0.986976\n",
-      "Ride Wit Me                                       0.939032\n",
-      "Buy U a Drank (Shawty Snappin') (feat. Yung Joc)  0.910351\n",
-      "Remix to Ignition                                 0.905673\n",
-      "Playin' the Game                                  0.896503\n",
-      "Ms. Jackson                                       0.894765\n",
-      "Gold Digger                                       0.894054\n",
-      "It Wasn't Me                                      0.892494\n",
-      "Yeah!                                             0.889881\n"
+      "Ignition - Remix                                  0.988374\n",
+      "It Wasn't Me                                      0.986951\n",
+      "Ride Wit Me                                       0.943358\n",
+      "Buy U a Drank (Shawty Snappin') (feat. Yung Joc)  0.928722\n",
+      "Playin' the Game                                  0.928006\n",
+      "Gold Digger                                       0.919052\n",
+      "Remix to Ignition                                 0.913630\n",
+      "Angel                                             0.910224\n",
+      "Yeah!                                             0.909689\n",
+      "Suga Suga                                         0.907704\n"
      ]
     }
    ],
@@ -135,12 +132,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (3) Example: get \"n_similar\" top songs for seed from actual test playlist"
+    "# (4) Example: get \"n_similar\" top songs for seed from actual test playlist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -195,13 +192,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -209,15 +201,15 @@
      "output_type": "stream",
      "text": [
       "Found 9 overlaps:\n",
-      "Twice\n",
-      "Smoke and Mirrors\n",
+      "Sunshine & Kool-Aid\n",
       "that one song\n",
       "Lovely\n",
-      "A Dream Is A Wish Your Heart Makes\n",
-      "My Girl (feat. T. Gatez)\n",
       "New Religion\n",
+      "A Dream Is A Wish Your Heart Makes\n",
+      "Caroline\n",
       "Milk & Honey\n",
-      "Caroline\n"
+      "My Girl (feat. T. Gatez)\n",
+      "Free\n"
      ]
     }
    ],
@@ -238,31 +230,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 17 overlaps:\n",
-      "Twice\n",
-      "She Moves In Her Own Way\n",
-      "New Religion\n",
-      "No Such Thing\n",
-      "Broad Shoulders (feat. Chance the Rapper)\n",
+      "Found 14 overlaps:\n",
+      "Sunshine & Kool-Aid\n",
       "that one song\n",
-      "Smoke and Mirrors\n",
-      "Heart's Content\n",
+      "New Religion\n",
+      "She Moves In Her Own Way\n",
+      "Twice\n",
+      "Lover Come Back\n",
       "Always Like This\n",
-      "Don't Dream It's Over\n",
-      "Free\n",
+      "Caroline\n",
+      "No Such Thing\n",
+      "Milk & Honey\n",
+      "Broad Shoulders (feat. Chance the Rapper)\n",
       "My Girl (feat. T. Gatez)\n",
       "90210 (feat. G-Eazy)\n",
-      "Sunshine & Kool-Aid\n",
-      "Milk & Honey\n",
-      "Caroline\n",
-      "Lover Come Back\n"
+      "Smoke and Mirrors\n"
      ]
     }
    ],
@@ -283,32 +272,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 18 overlaps:\n",
-      "Twice\n",
-      "She Moves In Her Own Way\n",
-      "New Religion\n",
-      "No Such Thing\n",
-      "Broad Shoulders (feat. Chance the Rapper)\n",
+      "Found 16 overlaps:\n",
+      "Sunshine & Kool-Aid\n",
       "that one song\n",
-      "Smoke and Mirrors\n",
-      "Heart's Content\n",
-      "Always Like This\n",
-      "Don't Dream It's Over\n",
-      "Free\n",
+      "New Religion\n",
+      "She Moves In Her Own Way\n",
+      "Twice\n",
       "Never Seen Anything \"Quite Like You\"\n",
+      "Lover Come Back\n",
+      "Always Like This\n",
+      "Caroline\n",
+      "No Such Thing\n",
+      "Heart's Content\n",
+      "Milk & Honey\n",
+      "Broad Shoulders (feat. Chance the Rapper)\n",
       "My Girl (feat. T. Gatez)\n",
       "90210 (feat. G-Eazy)\n",
-      "Sunshine & Kool-Aid\n",
-      "Milk & Honey\n",
-      "Caroline\n",
-      "Lover Come Back\n"
+      "Smoke and Mirrors\n"
      ]
     }
    ],
@@ -327,20 +314,6 @@
     "for overlap in overlaps:\n",
     "    print(wrmf_helpers.get_song_name(overlap))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
